# biowatch

./: .gitignore  CHANGELOG.md  electron-builder.yml  electron.vite.config.mjs  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_preview.yml  build_python_environment_linux.yml  build_python_environment_macos.yml  build_python_environment_windows.yml  build_python_environments.yml  build_windows.yml  website_docs_lint.yml
docs/: architecture.md  data-formats.md  database-schema.md  development.md  http-servers.md  import-export.md  ipc-api.md  troubleshooting.md
docs/plans/: 2026-04-30-overview-tab-revamp.md  2026-05-02-deployments-tab-revamp.md  2026-05-02-import-sanitize-description.md  2026-05-02-iucn-rationale-overview.md  2026-05-04-deployments-list-compact-plan.md  2026-05-05-ai-models-tab-plan.md  2026-05-05-best-capture-modal-redesign.md  2026-05-05-link-deployment-from-media-modal.md  2026-05-05-undo-redo-annotations.md  2026-05-06-camtrap-orphan-deployments-stubbing-plan.md  2026-05-06-study-settings-clear-cache.md
docs/specs/: 2026-04-21-common-names-robustness-design.md  (+21 more)
python-environments/common/: README.md  pyproject.toml
scripts/: audit-set.txt  build-common-names-dict.js  build-iucn-link-id.js  build-iucn-link-id.lib.js  build-species-info.js  build-species-info.lib.js  explore-gbif-vernaculars.js  extract-deepfaune-labels.py  profile-sources.mjs  rewrite-demo-dataset.js
scripts/lib/: aliases.js
website/: Makefile  README.md  mkdocs.yml  netlify.toml  pyproject.toml
(+283 files in other folders)
