[project]
name = "common"
version = "0.1.4"
description = "Common Python Environment for running the Machine Learning Models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "speciesnet==5.0.3",
    "fastapi>=0.115.12",
    "litserve>=0.2.16",
    "torch>=2.7.0",
    "numpy>=1.26.4",
    "timm>=1.0.15",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.151",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
